<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.startowerstudio.kly.PassengerProfileActivity"
    tools:showIn="@layout/activity_passenger_profile">

    <ImageView
        android:layout_width="163dp"
        android:layout_height="487dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/kly_ship_cropped_blue"
        android:contentDescription="@string/ship_description"
        />

    <include layout="@layout/countdown"
        android:id="@+id/countdown"
        android:layout_height="@dimen/countdown_height"
        android:layout_width="match_parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelLocation"
        android:background="@color/backgroundDefault"
        android:text="@string/label_location"
        android:textSize="18sp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/countdown"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passengerLocation"
        android:textColor="@color/dataBlue"
        android:background="@color/backgroundDefault"
        android:padding="8dp"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:onClick="nearbyPassengers"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/countdown"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelUsername"
        android:text="@string/label_username"
        android:background="@color/backgroundDefault"
        android:padding="8dp"
        android:textSize="18sp"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/labelLocation"
        app:layout_constraintRight_toLeftOf="@+id/passengerUsername"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passengerUsername"
        android:textColor="@color/dataBlue"
        android:background="@color/backgroundDefault"
        android:padding="8dp"
        android:textSize="18sp"
        android:onClick="loginDialog"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/labelLocation"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelOccupation"
        android:text="@string/label_occupation"
        android:textSize="18sp"
        android:background="@color/backgroundDefault"
        android:padding="8dp"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/labelUsername"
        app:layout_constraintRight_toLeftOf="@+id/passengerOccupation"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDefault"
        android:id="@+id/passengerOccupation"
        android:textColor="@color/dataBlue"
        android:textSize="18sp"
        android:padding="8dp"
        android:onClick="loginDialog"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/labelUsername"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelName"
        android:text="@string/label_name"
        android:background="@color/backgroundDefault"
        android:padding="8dp"
        android:textSize="18sp"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/passengerOccupation"
        app:layout_constraintLeft_toLeftOf="parent"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passengerName"
        android:text="@string/censor"
        android:textColor="@color/dataBlue"
        android:background="@color/backgroundDefault"
        android:padding="8dp"
        android:textSize="18sp"
        android:onClick="loginDialog"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/passengerOccupation"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelHealth"
        android:text="@string/label_health"
        android:background="@color/backgroundDefault"
        android:padding="8dp"
        android:textSize="18sp"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/labelName"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passengerHealth"
        android:text="@string/censor"
        android:textColor="@color/dataBlue"
        android:background="@color/backgroundDefault"
        android:padding="8dp"
        android:textSize="18sp"
        android:onClick="loginDialog"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/labelName"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/connectionsLabel"
        android:text="@string/label_connections"
        android:textSize="18sp"
        android:textColor="@color/buttonText"
        android:background="@color/backgroundDefault"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/labelHealth"
        />

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/connectionsList"
        android:layout_marginBottom="0dp"
        android:minHeight="100dp"
        android:elevation="@dimen/standard_elevation"
        app:layout_constraintTop_toBottomOf="@id/connectionsLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

</android.support.constraint.ConstraintLayout>
