<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.startowerstudio.kly.AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/artistNoteLabel"
        android:text="@string/artist_note_label"
        android:textColor="@color/dataBlue"
        android:textSize="@dimen/countdown_number_size"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:paddingLeft="@dimen/half_padding"
        android:paddingStart="@dimen/half_padding"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/artistNoteVal1"
        android:text="@string/artist_note_val_1"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:paddingLeft="@dimen/half_padding"
        android:paddingStart="@dimen/half_padding"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/artistNoteLabel"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/artistNoteVal2"
        android:text="@string/artist_note_val_2"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:paddingLeft="@dimen/half_padding"
        android:paddingStart="@dimen/half_padding"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/artistNoteVal1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/artistNoteVal3"
        android:text="@string/artist_note_val_3"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:paddingLeft="@dimen/half_padding"
        android:paddingStart="@dimen/half_padding"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/artistNoteVal2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/artistNoteVal4"
        android:text="@string/artist_note_val_4"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginStart="@dimen/standard_padding"
        android:paddingLeft="@dimen/half_padding"
        android:paddingStart="@dimen/half_padding"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/artistNoteVal3"
        />

</android.support.constraint.ConstraintLayout>
