<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.startowerstudio.kly.MainActivity"
    tools:showIn="@layout/activity_main">

    <include layout="@layout/countdown"
        android:id="@+id/countdown"
        android:layout_height="@dimen/countdown_height"
        android:layout_width="match_parent"
        />

    <Button
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundDefault"
        android:gravity="start"
        android:onClick="tasksButton"
        android:text="@string/title_activity_tasks"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/buttonText"
        android:textSize="@dimen/standard_data"
        android:typeface="normal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countdown"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundDefault"
        android:gravity="start"
        android:onClick="actStatus"
        android:text="@string/title_activity_ship_status"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/buttonText"
        android:textSize="@dimen/standard_data"
        android:typeface="normal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tasks"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundDefault"
        android:gravity="start"
        android:onClick="btnDestination"
        android:text="@string/title_activity_destination"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/buttonText"
        android:textSize="@dimen/standard_data"
        android:typeface="normal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/manifest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundDefault"
        android:gravity="start"
        android:onClick="btnManifest"
        android:text="@string/ship_manifest_button"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/buttonText"
        android:textSize="@dimen/standard_data"
        android:typeface="normal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destination"
        />

</android.support.constraint.ConstraintLayout>
