<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.startowerstudio.kly.Manifest"
    tools:showIn="@layout/activity_manifest">

    <!--<ImageView-->
        <!--android:layout_width="163dp"-->
        <!--android:layout_height="487dp"-->
        <!--android:adjustViewBounds="true"-->
        <!--android:cropToPadding="false"-->
        <!--android:padding="0dp"-->
        <!--android:scaleType="fitXY"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="1.0"-->
        <!--app:srcCompat="@drawable/kly_ship_cropped_blue"-->
        <!--android:contentDescription="@string/ship_description"-->
        <!--/>-->

    <include layout="@layout/countdown"
        android:id="@+id/countdown"
        android:layout_height="@dimen/countdown_height"
        android:layout_width="match_parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/queryDisplay"
        android:text="@string/query_display_label"
        android:textColor="@android:color/darker_gray"
        android:padding="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        android:background="@color/backgroundDefault"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/countdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameColumnLabel"
        android:text="@string/column_username"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/standard_label"
        android:padding="@dimen/standard_padding"
        android:background="@color/backgroundDefault"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/queryDisplay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationColumnLabel"
        android:text="@string/column_location"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/standard_label"
        android:padding="@dimen/standard_padding"
        android:background="@color/backgroundDefault"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/queryDisplay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        />

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/passengerList"
        android:layout_marginBottom="0dp"
        android:dividerHeight="0dp"
        app:layout_constraintTop_toBottomOf="@id/usernameColumnLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

</android.support.constraint.ConstraintLayout>
